    * FIX: Sites not using distritubed WATO now being skipped when determining
           the prefered peer

    BI:
    * FIX: Correct representation of (!), (!!) and (?) markers in check output

    Livestatus
    * FIX: comments_with_info in service table was always empty
    * FIX: check_icmp: fixed calculation of remaining length of output buffer
    
    Livecheck
    * FIX: fixed problem with long plugin output
    * FIX: added /0 termination to strings
    * FIX: changed check_type to be always active (0)
    * FIX: fix bug in assignment of livecheck helpers 
    * FIX: close inherited unused filedescriptors after fork()
    * FIX: kill process group of called plugin if timeout is reached
           -> preventing possible freeze of livecheck
    * FIX: correct escaping of character / in nagios checkresult file
    * FIX: fixed SIGSEGV on hosts without defined check_command
    * FIX: now providing correct output buffer size when calling check_icmp 

    Checks & Agents:
    * FIX: Linux mk_logwatch: iregex Parameter was never used
    * FIX: Windows agent: quote '%' in plugin output correctly
    * FIX: multipath check now handles '-' in "user friendly names"
    * New check mssql_counters.locks: Monitors locking related information of
      MSSQL tablespaces
    * FIX: mssql_counters checks now really only inventorize percentage based
      counters if a base value is set
    * windows_updates agent plugin: Fetching data in background mode, caching
      update information for 30 minutes
    * FIX: netapp_vfiler: fix inventory function (thanks to Falk Krentzlin)
    * FIX: ps: avoid exception, when CPU% is missing (Zombies on Solaris)
    * FIX: win_dhcp_pools: fixed calculation of perc_free

1.2.1i1:
    Core:
    * Allow to add options to rules. Currently the options "disabled" and
      "comment" are allowed. Options are kept in an optional dict at the
      end of each rule.
    * parent scan: skip gateways that are reachable via PING