@@ -132,6 +132,7 @@
     Livestatus
     * FIX: comments_with_info in service table was always empty
     * FIX: check_icmp: fixed calculation of remaining length of output buffer
+    * FIX: check_icmp: removed possible buffer overflow on do_output_char()
     
     Livecheck
     * FIX: fixed problem with long plugin output
